--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -24,7 +24,7 @@
     "import ipywidgets as widgets\n",
     "\n",
     "def q(x):\n",
-    "    if x == 'Write your answer here':\n",
+    "    if x == 'Write your answer here' or x=='Write your first action here' or x=='Write your second action here' or x=='Write your description here':\n",
     "        return 'You still need an answer!'\n",
     "    return 'Nice answer!'"
    ]
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interact(q1, x='Write your answer here');"
+    "interact(q, x='Write your answer here');"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interact(q1, x='Write your answer here');"
+    "interact(q, x='Write your answer here');"
    ]
   },
   {
@@ -119,7 +119,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interact(q1, x='Write your answer here');"
+    "interact(q, x='Write your answer here');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__QUESTION 4__\n",
+    "If you are at the start, and take the action \"Left\", and then take the \"Turn back\" action, which room do you end up in?"
    ]
   },
   {
@@ -127,14 +135,160 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "interact(q, x='Write your answer here');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__QUESTION 4__\n",
+    "If you are at the start, and take the \"Left\" action, and then take the \"Swim Across\" action, you end up in a room with no description and 2 possible actions. Can you write in a possible description, and two possible actions?"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "interact(q, x='Write your description here');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(q, x='Write your first action here');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(q, x='Write your second action here');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pretty simple adventure, right? Now, below I've coded up this text adventure game, so you can run the code below (by clicking on the code clock and hitting shift+enter) and try it out yourself! (Don't worry about the code for now, we'll learn about it as we go along!). When you get to the end of the text adventure and want to repeat it, you can just rerun the code block by hitting shift+enter again!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_game():\n",
+    "    choice = raw_input(\"You are in a hallway with a left and right door. Which door do you choose?\")\n",
+    "    if choice == \"left\":\n",
+    "        open_left_door()\n",
+    "    elif choice == \"right\":\n",
+    "        open_right_door()\n",
+    "    else:\n",
+    "        start_game()\n",
+    "\n",
+    "def open_left_door():\n",
+    "    choice = raw_input(\"You enter the left door, leading to a room full of water. There is a door on the otherside. What do you do?\")\n",
+    "    if choice == \"turn\":\n",
+    "        start_game()\n",
+    "    elif choice == \"swim\":\n",
+    "        swim_across()\n",
+    "    else:\n",
+    "        open_left_door()\n",
+    "\n",
+    "def open_right_door():\n",
+    "    choice= raw_input(\"You enter the right door, and find three boxes, each labeled 1,2,3. Which box do you open?\")\n",
+    "    if choice == \"1\":\n",
+    "        open_1()\n",
+    "    elif choice == \"2\":\n",
+    "        open_2()\n",
+    "    elif choice == \"3\":\n",
+    "        open_3()\n",
+    "    else:\n",
+    "        open_right_door()\n",
+    "\n",
+    "def swim_across():\n",
+    "    print \"...\"\n",
+    "\n",
+    "def open_1():\n",
+    "    print \"...\"\n",
+    "\n",
+    "def open_2():\n",
+    "    print \"...\"\n",
+    "\n",
+    "def open_3():\n",
+    "    print \"...\"\n",
+    "\n",
+    "start_game()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__QUESTION 5__\n",
+    "What happens if you put in the action \"eat food\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(q, x='Write your answer here');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "__QUESTION 6__\n",
+    "What happens if do the the \"left\" action, and then the \"swim\" action?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(q, x='Write your answer here');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The story isn't very complicated, but let's see if we can program it! In order to program our game, we need a way to make each of the pages, and then connect them together. We will use a general format to program each of our pages. Below is the tempalte you can copy to make each of your pages, along with an explanation of what the template is doing. This template lets you make pages with only two possible actions, but we will later on look at examples with more actions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def name_of_page():\n",
+    "    choice = raw_input(\"PAGE DESCRIPTION\")\n",
+    "    if choice == \"left\":\n",
+    "        open_left_door()\n",
+    "    elif choice == \"right\":\n",
+    "        open_right_door()\n",
+    "    else:\n",
+    "        start_game()"
+   ]
   }
  ],
  "metadata": {
