--- a/CLICKME.ipynb
+++ b/CLICKME.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BEFORE YOU START: OPEN UP ANY TEXT-EDITOR OF YOUR CHOICE (MICROSOFT WORD, NOTEPAD, ECT.) ON YOUR COMPUTER. ANYTIME A QUESTION IS ASKED, WRITE DOWN YOUR ANWER IN THE TEXT EDITOR. WHEN YOU ARE DONE, EMAIL YOUR ANSWERS TO YOUR INSTRUCTOR\n",
+    "BEFORE YOU START: OPEN UP ANY TEXT-EDITOR OF YOUR CHOICE (MICROSOFT WORD, NOTEPAD, ECT.) ON YOUR COMPUTER. ANYTIME A QUESTION IS ASKED, WRITE DOWN YOUR ANWER IN THE TEXT EDITOR UNLESS THE TUTORIAL TELLS YOU TO WRITE CODE INSIDE THIS WEBSITE (CODE GOES HERE BLOCKS). WHEN YOU ARE DONE, EMAIL YOUR ANSWERS TO YOUR INSTRUCTOR\n",
     "\n",
     "IF THE TUTORIAL TELLS YOU TO RUN A CODE BLOCK AND NOTHING HAPPENS, CLICK ON \"KERNEL\" IN THE TOOLBAR AT THE TOP OF THE SCREEN, AND HIT INTERRUPT, AND RUN THE CODE AGAIN."
    ]
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Text Adventures are very similiar to make-your-own-adventure books you may have read before. Essentially, you read a paragraph that describes you current situation, and then you decide which page to jump to based on what decision you want to make.  When you turn to the next page, you repeat the process! For example, below is a page from a make-your-own-adventure book. Read the following paragraph, and then make a decision about which page you would turn to."
+    "Text Adventures are very similiar to make-your-own-adventure books you may have read before. Essentially, you read a paragraph that describes your current situation, and then you decide which page to jump to based on what decision you want to make.  When you turn to the next page, you repeat the process! For example, below is a page from a make-your-own-adventure book. Read the following paragraph, and then make a decision about which page you would turn to."
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pretty simple adventure, right? Now, below I've coded up this text adventure game, so you can run the code below (by clicking on the code block and hitting shift+enter) and try it out yourself! (Don't worry about understanding the code for now, we'll learn about it as we go along!). When you get to the end of the text adventure and want to repeat it, you can just rerun the code block by hitting shift+enter again!"
+    "Pretty simple adventure, right? Now, below I've coded up this text adventure game, so you can run the code below (by clicking on the code block and hitting shift+enter) and try it out yourself by typing in the text box! (Don't worry about understanding the code for now, we'll learn about it as we go along!). When you get to the end of the text adventure and want to repeat it, you can just rerun the code block by hitting shift+enter again!"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use a general format to program each of our pages. Below is the tempalte you can copy to make each of your pages, along with an explanation of what the template is doing. This template lets you make pages with only two possible actions, but we will later on look at examples with more actions."
+    "We will use a general format to program each of our pages. Below is the template you can copy to make each of your pages, along with an explanation of what the template is doing. This template lets you make pages with only two possible actions, but we will later on look at examples with more actions."
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first line lets us define (def) the name of the page we are currently making. In programming, this is called a function (kind of like a math one!). Any other code we want to include in this page/function, we will use indents to indicate it's part of this page/function. We will use the name of this functon anytime want to be able to jump back to the page. Whenever we want to define a function, we write def, then the name of the function, then (): For example, I might make my first page called start_game, like the following:"
+    "The first line lets us define (def) the name of the page we are currently making. In programming, this is called a function (kind of like a math one!). Any other code we want to include in this page/function, we will use indents to indicate it's part of this page/function. We will use the name of this functon anytime want to be able to jump back to this page. Whenever we want to define a function, we write def, then the name of the function, then (): For example, I might make my first page called start_game, like the following:"
    ]
   },
   {
@@ -291,6 +291,13 @@
     "else:\n",
     "    print \"Come on in!\"\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice how we use <= to represent less than or equal to (age is less than or equal to 21)"
    ]
   },
   {
@@ -403,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If STATEMENT1 is true, then only SOME CODE HERE is done. Otherwise, if STATEMENT2 is true, then OTHER CODE HERE is only done. Otherwise, if STATEMENT3 is true, then MORE CODE HERE is only done. If STATEMENT1, STATEMENT2, and STATEMENT3 are all false, then only ANY CODE here is done. Notice how the order of if statements matter. When writing an if statement, we don't need an else or elif, but we need an if. The indents are used to tell us when each if/elif/else statement starts and ends."
+    "If STATEMENT1 is true, then only SOME CODE HERE is done. Otherwise, if STATEMENT2 is true, then OTHER CODE HERE is only done. Otherwise, if STATEMENT3 is true, then MORE CODE HERE is only done. If STATEMENT1, STATEMENT2, and STATEMENT3 are all false, then only ANY CODE here is done. Notice how the order of if statements matter. When writing an if statement, we don't need an else or elif, but we need an if. We can make as many elif as we want, but we can only make one if and else at max. The indents are used to tell us when each if/elif/else statement starts and ends."
    ]
   },
   {
@@ -425,6 +432,13 @@
     "    open_right_door()\n",
     "else:\n",
     "    start_game()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice here how we use == as a way to compare if two things are equal to each other. If a is equal to b, then a==b is true. If a does not equal b, then a==b is false. So, if the variable choice has the value \"left\", then choice==\"left\" is true. if the value of choice=\"dog\", then choice==\"left\" is false."
    ]
   },
   {
@@ -564,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how when you hit shift-enter, the nuber 4 comes out. Now, I've defined a function called add2and2, that has the same code inside"
+    "Notice how when you hit shift-enter, the number 4 comes out. Now, I've defined a function called add2and2, that has the same code inside"
    ]
   },
   {
@@ -581,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you do shift-enter, no 4 gets printed. This is because we've defined the function, but haven't ran it. Functions do not get ran when they are made, only when they are called. We can call the function by simply calling it name"
+    "When you do shift-enter, no 4 gets printed. This is because we've defined the function, but haven't ran it. Functions do not get ran when they are made, only when they are called. We can call the function by simply calling its name"
    ]
   },
   {
@@ -597,14 +611,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we run shift-enter on the code block above, we the number 4. Defining code is useful because if we want to use the same code over and over again, it can be tedious to write it over and over again. With functions, we can just call the name to make it do the same code again, with one line."
+    "When we run shift-enter on the code block above, we get the number 4. Defining functions is useful because if we want to use the same code over and over again, it can be tedious to write it over and over again. With functions, we can just call the name to make it do the same code again, with one line."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our text adventure code, we use functions to define each of our pages. The indented code in each function defintion seperates each page code. Right above question 5, all of our page functions are defined and ready to go. However, since we've defined all of our pages, we need to run one of them to start the game! Because start_game() is the name of the function that represents the first page, we can simply call the function after we've defined all of our pages. Thus, in the completed game code, we define all of the functions, and then call start_game() so that when you run the code-block, the game begins. Without calling start_game() at the bottom, all of our functions would be defined, but nothing would happen. (Remember that start_game() is just an arbitrary name for the function that represents the first page. We could have named it in_hallway() or anything else, as long as it doesn't overlap in name with another function)."
+    "For our text adventure code, we use functions to define each of our pages. The indented code in each function defintion seperates each page code. Right above question 5 in this tutorial, all of our page functions are defined and ready to go. However, since we've defined all of our pages, we need to run one of them to start the game! Because start_game() is the name of the function that represents the first page, we can simply call the function after we've defined all of our pages. Thus, in the completed game code, we define all of the functions, and then call start_game() so that when you run the code-block, the game begins. Without calling start_game() at the bottom, all of our functions would be defined, but nothing would happen. (Remember that start_game() is just an arbitrary name for the function that represents the first page. We could have named it in_hallway() or anything else, as long as it doesn't overlap in name with another function)."
    ]
   },
   {
